--- a/templates/store/view_store.html
+++ b/templates/store/view_store.html
@@ -2,6 +2,7 @@
 {% block title %}{{ store.brand_name }} | Powered by Waapfolio{% endblock title %}
 {% block body %}
 {% load static %}
+{% load humanize %}
 
 <!-- ---------- STYLES ---------- -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -458,7 +459,10 @@ body.dark .store-address {
               </a>
               <div class="card-body text-center p-3">
                 <h6>{{ item.name }}</h6>
-                <p>{{ item.price }}</p>
+                <p class="card-text">
+                  {% if item.currency == "NGN" %}₦{% elif item.currency == "USD" %}${% elif item.currency == "EUR" %}€{% elif item.currency == "GBP" %}£{% elif item.currency == "GHS" %}₵{% endif %}
+                  {{ item.price|intcomma }}
+                </p>
                 <div class="card-actions mt-2">
                   <button class="btn-like" data-item-id="{{ item.id }}">
                     <i class="bi {% if meta.user_liked %}bi-heart-fill liked-icon{% else %}bi-heart not-liked-icon{% endif %}"></i>
