fixed price in product detail

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ product.name }} | {{ product.store.brand_name }}{% endblock %}
 {% load static %}
-
+{% load humanize %}
 {% block body %}
 
 <div class="container py-5">
