--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    {% block meta %}
+    <meta property="og:title" content="{{ store.brand_name }} | Waapfolio" />
+    <meta property="og:description" content="{{ store.Bio|truncatewords:20 }}" />
+    <meta property="og:image" content="{% if store.brand_logo %}{{ store.brand_logo.url }}{% elif store.brand_logo_url %}{{ store.brand_logo_url }}{% else %}{% static 'images/logo.png' %}{% endif %}" />
+    <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Waapfolio" />
+    {% endblock %}
 
 
   <style>
