--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="{% static "images/logo-bg.png" %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WAAP FOLIO {% block title %}{% endblock title %}</title>
-
+     {% block head %}{% endblock head %}
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
