--- a/templates/store/view_store.html
+++ b/templates/store/view_store.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
 {% block title %}{{ store.brand_name }} | Powered by Waapfolio{% endblock title %}
+{% block head %}
+    <!-- Open Graph / WhatsApp Share -->
+    <meta property="og:title" content="{{ store.brand_name }}">
+    <meta property="og:description" content="{{ store.Bio|default:'Check out this store on Waapfolio!' }}">
+    <meta property="og:image" content="{% if store.brand_logo %}{{ store.brand_logo.url }}{% else %}{% static 'images/logo.png' %}{% endif %}">
+    <meta property="og:url" content="{{ full_url }}">
+    <meta property="og:type" content="website">
+    <!-- Optional Twitter / X tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ store.brand_name }}">
+    <meta name="twitter:description" content="{{ store.Bio|default:'Check out this store on Waapfolio!' }}">
+    <meta name="twitter:image" content="{% if store.brand_logo %}{{ store.brand_logo.url }}{% else %}{% static 'images/logo.png' %}{% endif %}">
+{% endblock head %}
+
 {% block body %}
 {% load static %}
 {% load humanize %}
