--- a/templates/base.html
+++ b/templates/base.html
@@ -474,10 +474,13 @@ body.dark .list-group-item span {
 {% if messages %}
   <div class="messages">
     {% for message in messages %}
-      <p class="text-danger">{{ message }}</p>
+      {% if 'error' in message.tags %}
+        <p class="text-danger">{{ message }}</p>
+      {% endif %}
     {% endfor %}
   </div>
 {% endif %}
+
   <!-- ---------- Global Loader Overlay ---------- -->
   <div id="globalLoader" class="global-loader">
     <div class="spinner"></div>
