--- a/templates/about.html
+++ b/templates/about.html
@@ -203,7 +203,7 @@ h1, h2, h3, h5 {
     <div>
         <img src="{% static 'images/victory.jpg' %}" class="rounded-circle mb-3" width="150" height="150" alt="Victory">
         <h5 class="fw-bold"> Dave Victory</h5>
-        <p class="text-muted">Graphics, Tester etc</p>
+        <p class="text-muted">Graphics & CO-CEO </p>
     </div>
 </div>
 
