--- a/templates/store/view_store.html
+++ b/templates/store/view_store.html
@@ -436,9 +436,10 @@ body.dark .store-address {
 
   <p>{{ store.Bio }}</p>
 <div class="d-flex justify-content-center align-items-center text-success fw-semibold mb-2">
-  <i class="bi bi-eye-fill me-2"></i> 
-  {{ store.total_views }} total views
+  <i class="bi bi-bag-check-fill me-2"></i> 
+  {{ store.total_orders }} total orders made
 </div>
+
   <!-- ---------- ADD ADDRESS HERE ---------- -->
 {% if store.address %}
   <div class="text-center text-muted mb-2 store-address">
